# LSMMemoryProfiling

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark_run.sh  bucket_count_vary_new.sh  bump_plot.py  cleanup.sh  comparative_internal.py  correct2_rq_selectivity_run_entry32.sh  correct_rq_selectivity_run.sh  dec30_clock_inmemory.sh  dec30_interleave_inmemory.sh  diff_workload.sh  fixed_lambda_benchmark.sh  fixed_memory_interleave_run.sh  fixed_memory_sequential_run.sh  fixed_ondisk_interleave_run.sh  fixed_ondisk_sequential_run.sh  flamegraph_profile.sh  flamegraph_workload_gen.sh  interleave_run.sh  interleaverun.sh  investigation_whatswrong.sh  lambda_benchmark.sh  local_download_workloadlog.sh  no_hole_selectivity.sh  out.folded  perf.data  perf.data.old  plot_all_point.py  plot_concurrency.py  plot_disk_exp_BACKUP.py  plot_env.sh  plot_insert_only.py  plot_points_noise.py  plot_pure_insert_only.py  prefix_length_vary_new.sh  profile.sh  pyproject.toml  (+28 more)
Wrapper/: Makefile  args.hxx  aux_time.cc  aux_time.h  emu_environment.cc  emu_environment.h  parse_exp_output.py  stats.cc  stats.h  working_version.cc
concurrency/experiments-concurrency-I1000000-PQ0-RQ0/: workload.specs.json
concurrencybackup2/experiments-concurrency-I10000000-PQ0-RQ0/: workload.specs.json
db/: 000010.sst  IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
include/: buffer.h  config_options.h  db_env.h  event_listners.h  fluid_lsm.h  parse_arguments.h  run_workload.h  utils.h  workload_monitor.h
james-scripts/: benchmark_run.sh  cleanup.sh  comparative_internal.py  flamegraph_profile.sh  internal_func.py  perf_flame_exp.sh  sequential_run_updated.sh
lib/: .gitmodules
lib/rocksdb/memtable/: skiplistrep.cc  vectorrep.cc
lib/trie/: CMakeLists.txt  README.md  trie_test.cc
lib/trie/fuzz/: .gitignore  Makefile  trie_fuzzer.cc
lib/trie/fuzz/proto/: db_operation.proto
lib/trie/src/: trie.cc
paper_plot_script/: buffer_wastage.py  common_prefix_fig18.py  correct_rq_plot.py  diff_entrysize_commonprefix.py  meta_data_overhead_vs_buffer_size.py  meta_data_with_bucket_prefix_variation.py  metada_plot.py  multiplot_rawop_interleave_throughput.py  pq_stall.py  selectivity_returned.py  style.py  throughput_latency.py  varied_bucket_prefix_fig18.py  write_stall_vectorrep.py
paper_plot_script/plot/: __init__.py  style.py  utils.py
plotting/: backup.py  bump_plot_select.py  comparative_internal.py  compare_flex.py  individual_get_time.py  internal_func.py  net_memory_wastage.py  new_metadata_overhead.py  obsolete.py  plot_pure_insert_only.py  pre_plotting.py  prefix_1to4.py  raw_op_plot_old.py  replicate_memory_footprint.py  throughput_mean_latency.py
scripts/: generate_specs.py  rebuild.sh  steps-bench.py  steps-plot.py
scripts/buffer/: diskbased-exp.sh  in-memory-exp.sh  lowpri-vector-exp.sh  lowpri-wal-exp.sh  optimize_vec.sh  run-diskbased-all-devices.sh  scalability.sh  snapshot-compare-exp.sh  stateful-vector-pq-exp.sh  vary-bucket-count-exp.sh  vary-bucket-count-mean-capacity.sh  vary-buffer-exp.sh  vary-buffersize-diskbased-exp.sh  vary-common-prefix-exp.sh  vary-entrysize-exp.sh  vary-prefix-length-exp.sh  vary-prefix-length-mean-capacity.sh  vary-rq-selectivity-exp.sh  vector-get-timer-exp.sh  ycsb-exp.sh
scripts/run/: 1gb_vary_rq_common_prefix.sh  3phase_ondisk_singlebuffer.sh  3phase_ondisk_varybuffer.sh  bucket_count_vary_new.sh  buffer_vs_memoryoverhead.sh  cleanup.sh  compare_vec_variants_get.sh  correct2_rq_selectivity_run_entry32.sh  correct_rq_selectivity_run.sh  dec30_clock_inmemory.sh  dec30_interleave_inmemory.sh  default_rdb_compare.sh  fig19ABC.sh  fig19_partD_newsetting_316.sh  fig_8_buffer_metadata.sh  fixed_ondisk_sequential_run.sh  hashhybrid_compare.sh  inplace_update_test.sh  interleave_get_path.sh  local_download_workloadlog.sh  lowpri_wal_vary.sh  multi_phase_interleave.sh  multi_phase_ondisk_interleave.sh  multi_phase_rawop.sh  multiphase_rq_vary_interleave.sh  new_buffer_run_feb24.sh  new_linkedlist_test.sh  ondisk_sa_vary_delete.sh  ondisk_vary_sizeratio.sh  per_op_timer.sh  prefix_length_vary_new.sh  prefix_length_vary_new_fig19_newsetting  regular_skiplist_feb11.sh  rq_common_prefix_short_run.sh  runexp_rawop.sh  runexp_rawop_nowl.sh  runmeta.sh  sequential_get_path.sh  sequential_run_old.sh  skipcompare_feb11_buckets.sh  (+3 more)
src/: aux_time.cc  buffer.cc  db_env.cc  event_listners.cc  fluid_lsm.cc  run_workload.cc  stats.cc  utils.cc  working_version.cc
src/.notebooks/: Fixed_rawop_throughput_ondisk.py  Jan6_hashhybrid.py  diff_entrysize_commonprefix.py  fewer_buckets_overhead_hash_skiplist.py  fig14_hashcompare_total.py  fig8_buffersize_new.py  fig_8_metadata_entrysize_vary.py  get_path_breakdown.py  linklist_compare_feb24.py  meta_data_overhead_vs_buffer_size.py  meta_data_overhead_vs_entry_size.py  multiphase_rawop_fig10_mar14.py  multiplot_rawop_interleave_throughput.py  ondisk_interleaved_insert_debug.py  ondisk_t6_varybuffersize.py  plot_analytical.py  plot_disk-based_exp.py  plot_disk-based_varydelete.py  plot_disk-based_varysizeratio.py  plot_disk-based_varyupdate.py  plot_diskbased_hardware.py  plot_hash_hybrids.py  plot_inmemory_mixed_ops.py  plot_io_analytical.py  plot_lowpri_vector.py  plot_lowpri_wal.py  plot_memory_overhead_analytical.py  plot_shifting_exp.py  plot_shifting_memtable.py  plot_snapshot_compare.py  plot_stateful_vector_pq.py  plot_vary_bucket_count.py  plot_vary_bucket_count_mean_capacity.py  plot_vary_buffersize_overhead.py  plot_vary_buffersize_throughput.py  plot_vary_common_prefix.py  plot_vary_entrysize_overhead.py  plot_vary_prefix_length.py  plot_vary_prefix_length_mean_capacity.py  plot_vary_rq_selectivity.py  (+11 more)
src/.notebooks/old_plot/: Fixed_rawop_throughput_inmemory.py  Jan6.py  Jan6_rocksdbstats.py  Mar17_fig16_ABCD.py  Mar17_fig16_ABCD_newsetting.py  common_prefix_incompletedata_fig18.py  common_prefix_total_order_seek.py  dec30.py  (+33 more)
text/paper-draft/: 0-abstract.tex  1-intro.tex  2-background.tex  2-memtable_implementations.tex  3-design_space.tex  6-experimental_results.tex  8-conclusion.tex  paper.tex
(+18 files in other folders)
